--- a/app/assets/stylesheets/business.css
+++ b/app/assets/stylesheets/business.css
@@ -1,6 +1,5 @@
 .bustabcontainer {
-	float: left;
-	margin-left: 20px;
+	float: right;
 	width: 300px;
 	border-radius: 5px;
 	background-color: white;
@@ -15,12 +14,12 @@
 .buscontainer {
 	margin-right: auto;
 	margin-left: auto;
-	width: 1200px;
+	width: 950px;
 }
 
 .busscrollcontainer {
 	overflow: scroll;
-	width: 650px;
+	width: 610px;
 	height: 100vh;
 	padding-left: 20px;
 	float: left;
