--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -9,6 +9,8 @@ body, html {
     <div class="parallax-layer parallax-layer-nav">
       <div class="navbar-billboard">
         <div class="logo"></div>
+        <div class="businesslogin btn" data-toggle="modal" data-target="#loginModal"><span class="loginbutton"><a>business log in</a></span></div>
+        <div class="userlogin btn"><span class="loginbutton"><%= link_to "user log in", "auth/twitter", :class => "loginbutton" %></span></div>
       </div>
     </div>
     <div class="parallax-layer parallax-layer-4">
@@ -25,6 +27,8 @@ body, html {
     <div class="parallax-layer parallax-layer-nav">
       <div class="navbar-clouds">
         <div class="logo"></div>
+        <div class="businesslogin btn" data-toggle="modal" data-target="#loginModal"><span class="loginbutton"><a>business log in</a></span></div>
+        <div class="userlogin btn"><span class="loginbutton"><%= link_to "user log in", "auth/twitter", :class => "loginbutton" %></span></div>
       </div>
     </div>
     <div class="parallax-layer parallax-layer-3">
@@ -62,6 +66,8 @@ body, html {
     <div class="parallax-layer parallax-layer-nav">
       <div class="navbar-grass">
         <div class="logo"></div>
+        <div class="businesslogin btn" data-toggle="modal" data-target="#loginModal"><span class="loginbutton"><a>business log in</a></span></div>
+        <div class="userlogin btn"><span class="loginbutton"><%= link_to "user log in", "auth/twitter", :class => "loginbutton" %></span></div>
       </div>
     </div>
     <div class="parallax-layer parallax-layer-4">
@@ -81,6 +87,8 @@ body, html {
     <div class="parallax-layer parallax-layer-nav">
       <div class="navbar-ug">
         <div class="logo"></div>
+        <div class="businesslogin btn" data-toggle="modal" data-target="#loginModal"><span class="loginbutton"><a>business log in</a></span></div>
+        <div class="userlogin btn"><span class="loginbutton"><%= link_to "user log in", "auth/twitter", :class => "loginbutton" %></span></div>
       </div>
     </div>
     <div class="parallax-layer parallax-layer-4">
@@ -88,6 +96,73 @@ body, html {
         <div class="pipeleft"></div>
         <div class="piperight"></div>
         <div class="pipecenter"></div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- Log in Modal -->
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" tabindex="-1"  data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+    <%= form_for business_new, url: session_path do |f| %>
+    <% flash.each do |k,v| %>
+    <div class="col-md-12 alert alert-danger" role="alert">
+      <%= v %>
+    </div>
+  <% end %>
+     <%= hidden_field_tag :test, "test" %>
+    Username:  <%= f.text_field :name, required:true, :class => "form-control input-lg", placeholder: "Name Here..." %>
+    <br />
+    Password: <%= f.password_field :password, required:true, :class => "form-control input-lg", placeholder: "Password Here..." %>
+    <%= f.submit "Log in", :class => 'startbuttons' %>
+  <% end %>
+      </div>
+      <div class="modal-footer">
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Sign up Modal -->
+<div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" tabindex="-1"  data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+          <%= form_for business_new do |f| %>
+      <div class="field">
+        <%= f.label :name %><br>
+        <%= f.text_field :name %>
+      </div>
+      <div class="field">
+        <%= f.label :email %><br>
+        <%= f.text_field :email %>
+      </div>
+      <div class="field">
+        <%= f.label :password %><br>
+        <%= f.password_field :password %>
+      </div>
+      <div class="field">
+        <%= f.label :password_confirmation %><br>
+        <%= f.password_field :password_confirmation %>
+      </div>
+      <br>
+      <div class="actions">
+        <%= f.submit "Sign up" %>
+      </div>
+    <% end %>
+      </div>
+      <div class="modal-footer">
       </div>
     </div>
   </div>
