--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
           <div class="data">
             <ul>
               <li>
-                <%= @user.tweets %>
+                <%= @user.tweet_count %>
                 <span>Tweets</span>
               </li>
               <li>
@@ -44,7 +44,7 @@
   <h1>CAMPAIGN POSTS</h1>
   <% @campaigns.each do |c| %>
   <div>
-    <% if (c.followers <= @user.followers) && (c.location == @user.location) %>
+    <% if (c.followers <= @user.followers) && (c.location == @user.location) && (c.tweets > 0) %>
     <div class="col-md-4 col-sm-6">
       <div class="post_container">
         <header>
