--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -2,6 +2,39 @@
 body, html {
   overflow: hidden;
 }
+
+.parallax-group a { 
+  color: black;
+  text-decoration: none;
+}
+
+.businesslogin {
+  margin-top: 15px;
+  height: 50px;
+  width: 185;
+  border: 1px solid black;
+  border-radius: 25px;
+  background-color: none;
+  float: right;
+}
+
+.userlogin {
+  margin-top: 15px;
+  height: 50px;
+  width: 140px;
+  border: 1px solid black;
+  border-radius: 25px;
+  background-color: none;
+  margin-right: 20px;
+  float: right;
+}
+
+.loginbutton {
+  font-family: "Helvetica";
+  font-weight: 200;
+  font-size: 25px;
+  float: left;
+}
 </style>
 <div class="parallax">
   <!-- video/billboard level -->
