more css changes fo rheroku 2

--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -8,7 +8,7 @@
 	border-bottom: 1px solid #e1e8ed;
 }
 
-.userindex-container {
+.userindexcontainer {
 	width: 1000px;
 	margin-left: auto;
 	margin-right: auto;
