--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class="userindex-container">
+<div class="userindexcontainer">
 	<div class="usercontainer">
 		<div class="useratts"><%= current_user.name %></div>
 		<div class="useratts">Tweets: <%= current_user.followers %></div>
