added hover to home.html

--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -2,38 +2,55 @@
 body, html {
   overflow: hidden;
 }
-
 .parallax-group a { 
   color: black;
   text-decoration: none;
 }
-
+.parallax-group a:hover { 
+  color: white;
+  text-decoration: none;
+}
 .businesslogin {
   margin-top: 15px;
-  height: 50px;
+  height: 40px;
   width: 185;
   border: 1px solid black;
-  border-radius: 25px;
+  border-radius: 20px;
   background-color: none;
   float: right;
 }
 
+.businesslogin:hover {
+  border-radius: 20px;
+  background-color: black;
+}
+
 .userlogin {
   margin-top: 15px;
-  height: 50px;
-  width: 140px;
+  height: 40px;
+  width: 120px;
   border: 1px solid black;
-  border-radius: 25px;
+  border-radius: 20px;
   background-color: none;
   margin-right: 20px;
   float: right;
 }
 
+.userlogin:hover {
+  border-radius: 20px;
+  background-color: black;
+}
+
 .loginbutton {
   font-family: "Helvetica";
   font-weight: 200;
-  font-size: 25px;
+  font-size: 20px;
   float: left;
+}
+
+.loginbutton:hover {
+  color: white;
+  font-color: white;
 }
 </style>
 <div class="parallax">
