Added error messages for sign up and campaigns, also added sign up form to homepage

--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -53,6 +53,12 @@
         <!-- new campaigns begin -->
         <%= form_for(campaign_new) do |f| %>
 
+          <% flash.each do |k,v| %>
+            <div class="col-md-12 alert alert-danger" role="alert">
+              <%= v %>
+            </div>
+          <% end %>
+
           <div class="field">
             <%= f.label 'Name to reference this post by' %><br>
             <%= f.text_field :name, :class => "form-control", :required => true %>
